--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:contentDescription="@string/pretty_cat" />
+        android:contentDescription="@string/pretty_cat"
+        android:src="@drawable/ic_cat_placeholder" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnNextCat"
