--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,21 +11,35 @@
         android:id="@+id/ivCat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:contentDescription="@string/pretty_cat"
-        android:src="@drawable/ic_cat_placeholder" />
+        android:minWidth="150dp"
+        android:minHeight="150dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_cat_placeholder"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnNextCat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
         android:enabled="false"
         android:gravity="center"
         android:padding="16dp"
-        android:text="@string/show_next_btn"
         app:cornerRadius="8dp"
-        app:layout_constraintTop_toBottomOf="@id/ivCat" />
-</FrameLayout>
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="@id/btnNextCat"
+        app:layout_constraintEnd_toEndOf="@id/btnNextCat"
+        app:layout_constraintStart_toStartOf="@id/btnNextCat"
+        app:layout_constraintTop_toTopOf="@id/btnNextCat" />
+</androidx.constraintlayout.widget.ConstraintLayout>
